<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <Button
        android:id="@+id/btn_bottom_sheet_filter_apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:background="@drawable/add_btn_background"
        android:enabled="false"
        android:text="@string/apply" />

    <TextView
        android:id="@+id/tv_bottom_sheet_filter_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/btn_bottom_sheet_filter_apply"
        android:layout_marginBottom="16dp"
        android:layout_toStartOf="@id/btn_bottom_sheet_filter_apply"
        android:padding="8dp"
        android:text="@string/reset"
        android:textColor="@color/colorPrimary"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv_bottom_sheet_filter_by_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_toStartOf="@id/tv_bottom_sheet_filter_reset"
        android:text="@string/filters"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_bottom_sheet_filter_beer_style"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/btn_bottom_sheet_filter_apply" />

</RelativeLayout>